--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,32 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <img class="navbar-brand" src="image.png" alt="logo-technoAging">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/cadastro-tecnicos">Cadastro de Técnicos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/perfil">Perfil</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/editar-perfil">Editar Perfil</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <router-outlet></router-outlet>
   <app-root></app-root>
 </body>
 </html>
+
