--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8">
@@ -8,47 +8,68 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
-  <button class="navbar-toggler" onclick="toggleMenu()">
-    <span class="navbar-toggler-icon"></span>
-    <span class="navbar-toggler-icon"></span>
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
   <nav class="navbar" id="sidebarMenu">
+    <button class="navbar-toggler" onclick="toggleMenu()">
+      <span class="fas fa-bars"></span>
+    </button>
     <div>
-      <img class="navbar-brand" src="image.png" alt="logo-technoAging">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/login">Login</a>
+          <a class="nav-link" routerLink="/login">
+            <i class="fas fa-sign-in-alt"></i>
+            <span class="nav-text">Login</span>
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/cadastro-tecnico">Cadastro de Técnicos</a>
+          <a class="nav-link" routerLink="/cadastro-tecnico">
+            <i class="fas fa-user-plus"></i>
+            <span class="nav-text">Cadastro de Técnicos</span>
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/perfil">Perfil</a>
+          <a class="nav-link" routerLink="/perfil">
+            <i class="fas fa-user"></i>
+            <span class="nav-text">Perfil</span>
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="#">Testes</a>
+          <a class="nav-link" routerLink="#">
+            <i class="fas fa-vials"></i>
+            <span class="nav-text">Testes</span>
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="#">Pacientes</a>
+          <a class="nav-link" routerLink="#">
+            <i class="fas fa-procedures"></i>
+            <span class="nav-text">Pacientes</span>
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="#">Resultados</a>
+          <a class="nav-link" routerLink="#">
+            <i class="fas fa-chart-line"></i>
+            <span class="nav-text">Resultados</span>
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="#">Sair</a>
+          <a class="nav-link" routerLink="#">
+            <i class="fas fa-sign-out-alt"></i>
+            <span class="nav-text">Sair</span>
+          </a>
         </li>
       </ul>
     </div>
   </nav>
+
+  <!-- Conteúdo principal -->
   <div class="main-content" id="mainContent">
     <router-outlet></router-outlet>
     <app-root></app-root>
   </div>
+
   <script>
     function toggleMenu() {
       const sidebar = document.getElementById('sidebarMenu');
@@ -58,4 +79,5 @@
     }
   </script>
 </body>
+
 </html>
